--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ name = "plex2jellyfin"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.6"
 dependencies = [
-    "plexapi>=4.17.2",
-    "progress>=1.6.1",
-    "requests>=2.32.5",
+    "plexapi",
+    "progress",
+    "requests",
 ]
